# lecture-6-oop

./: abstract_base_classes.py  class_and_static_methods.py  class_method_example.py  computed_attributes.py  decorator_factory.py  inheritance_and_polymorphism.py  property_as_decorator.py  property_caching.py  property_write_only.py  pyproject.toml  task.py
1_basics/: classes_and_objects.py  inheritance_and_polymorphism.py  name_mangling.py  operator_overloading.py  str_repr.py
2_properties/: descriptor.py  descriptor_validator.py  property_caching.py  property_read_only.py  property_traditional_way.py  property_validation.py  property_write_only.py
3_closures/: closures.py  decorator_factory.py
4_class_and_static_methods/: class_and_static_methods.py  class_method_example.py  summator.py
